--- a/apis/restapi_node/package.json
+++ b/apis/restapi_node/package.json
@@ -16,6 +16,7 @@
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
+    "@types/lodash": "^4.14.199",
     "@types/mongoose": "^5.11.97",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
@@ -27,6 +28,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "mongoose": "^7.5.4"
   }
 }
